--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -82,7 +82,7 @@
                             <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unitPrice="{{ .price }}">{{ mul 2 .price }}</span></span>
                         {{ else }}
                         <div class="flex items-center mb-6">
-                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€{{ .price }}</span>
+                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unitPrice="{{ .price }}">{{ .price }}</span></span>
                         {{ end }}
                         <span class="text-xl text-text dark:text-darkmode-text">{{ i18n "membership.plan.per_year" }}</span>
                           </div>
@@ -173,72 +173,61 @@
       <div data-hs-stepper-content-item='{
         "index": 3
       }' style="display: none;" class="space-y-4 md:space-y-8">
-        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
-          <!-- Summary -->
-          <div class="space-y-8 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
-            {{ range .Params.step_2.form }}
-            <p id="summary_{{ .id }}" class="summary_key">
-              {{ .label }}: 
-              <span class="summary_value text-dark dark:text-darkmode-dark">
-                --
-              </span>
-            </p>
-            {{ end }}
-          </div>
-          <!-- End Summary -->
-        </div>
-        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
-          <!-- Consents -->
-          <div class="space-y-8">
-            {{ range .Params.step_3.consents }}
-            <div class="flex items-center">
-              <input id="{{ .id }}" type="checkbox" value="" class="w-6 h-6 text-blue-600 bg-body border-border rounded focus:dark dark:focus:darkmode-dark dark:ring-offset-gray-800 focus:ring-2 dark:bg-darkmode-body dark:border-darkmode-border">
-              <label for="{{ .id }}" class="ms-4 text-md text-dark dark:text-darkmode-dark">
-                {{ .label.text }}
-                {{ with .label.link }} 
-                <a href="{{ .ulr }}" class="text-blue-600 dark:text-blue-500 hover:underline">
-                  {{ .text }}
-                </a>
-                {{ end }}
-                {{ if .required }}
-                <svg class="inline ml-2" xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
-                    <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
-                </svg>
-                {{ end }}
-              </label>
+        <div id="step-3" class="form-step">
+          <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+            <!-- Summary -->
+            <div class="space-y-6 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
+              {{ range .Params.step_2.form }}
+              <p class="text-text dark:text-darkmode-text">
+                {{ .label }}: 
+                <span id="summary_{{ .id }}" class="text-dark dark:text-darkmode-dark">
+                  --
+                </span>
+              </p>
+              {{ end }}
             </div>
-            {{ end }}
+            <!-- End Summary -->
           </div>
-        </div>
-          <!-- End Consents -->
-          <!-- Total -->
-        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
-          <div id="total" class="flex flex-wrap">
-            <p class="flex-none text-dark dark:text-darkmode-dark">
-              <span id="total_units">
-                --
-              </span> 
-              &times; 
-              <span id="total_plan">
-                --
-              </span>
-            </p>
-            <p class="flex-auto text-text dark:text-darkmode-text"> 
-              (€
-              <span id="unit_price">
-                -- 
-              </span>
-               {{ i18n "membership.plan.per_person" }})
-            </p>
-            <p class="flex-none text-dark dark:text-darkmode-dark">
-              €
-              <span id="total_price">
-                --
-              </span>
-            </p>
+          <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+            <!-- Consents -->
+            <div class="space-y-8">
+              {{ range .Params.step_3.consents }}
+              <div class="flex items-center">
+                <input id="{{ .id }}" type="checkbox" value="" class="w-6 h-6 text-blue-600 bg-body border-border rounded focus:dark dark:focus:darkmode-dark dark:ring-offset-gray-800 focus:ring-2 dark:bg-darkmode-body dark:border-darkmode-border" {{ if .required }} required {{ end }}>
+                <label for="{{ .id }}" class="ms-4 text-md text-dark dark:text-darkmode-dark">
+                  {{ .label.text }}
+                  {{ with .label.link }} 
+                  <a href="{{ .ulr }}" class="text-blue-600 dark:text-blue-500 hover:underline">
+                    {{ .text }}
+                  </a>
+                  {{ end }}
+                  {{ if .required }}
+                  <svg class="inline ml-2" xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
+                      <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
+                  </svg>
+                  {{ end }}
+                </label>
+              </div>
+              {{ end }}
+            </div>
           </div>
+            <!-- End Consents -->
+            <!-- Total -->
+          <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+            <div id="total" class="flex flex-wrap gap-x-4">
+              <p class="flex-none text-dark dark:text-darkmode-dark">
+                <span id="total_units">--</span> &times; <span id="total_plan">--</span>
+              </p>
+              <p class="flex-auto text-text dark:text-darkmode-text">
+                (€ <span id="unit_price">--</span> {{ i18n "membership.plan.per_person" }})
+              </p>
+              <p class="flex-none text-dark dark:text-darkmode-dark">
+                € <span id="total_price">--</span>
+              </p>
+            </div>
+          </div>
+            <!-- End Total -->
         </div>
-          <!-- End Total -->
       </div>
       <!-- End Third Contnet -->
 
@@ -268,7 +257,7 @@
             <path d="m9 18 6-6-6-6"></path>
           </svg>
         </button>
-        <button type="button" class="inline-flex items-center gap-x-1 btn btn-primary" data-hs-stepper-finish-btn="" style="display: none;">
+        <button type="button" class="inline-flex items-center gap-x-1 btn btn-primary" data-hs-stepper-finish-btn="" disabled style="display: none;">
           {{ i18n "button_labels.submit" }}
         </button>
       </div>
