--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -172,8 +172,8 @@
       <!-- Third Contnet -->
       <div data-hs-stepper-content-item='{
         "index": 3
-      }' style="display: none;" class="space-y-4 md:space-y-8">
-        <div id="step-3" class="form-step">
+      }' style="display: none;">
+        <div id="step-3" class="form-step space-y-4 md:space-y-8">
           <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
             <!-- Summary -->
             <div class="space-y-6 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
