--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,7 +28,8 @@
             {{ end }}
           </div>
           <div class="col-12">
-            {{ partial "image" (dict "Src" .image "Alt" "Banner image" "Loading" "eager" "Class" "mx-auto lg:!max-w-[800px]" "DisplayXL" "800x" ) }}
+            {{ partial "image" (dict "Src" .image "Alt" "Banner image" "Loading" "eager" "Class" "mx-auto lg:!max-w-[800px] dark:hidden" "DisplayXL" "800x" ) }}
+            {{ partial "image" (dict "Src" .image_dark "Alt" "Banner image" "Loading" "eager" "Class" "mx-auto lg:!max-w-[800px] hidden dark:block" "DisplayXL" "800x" ) }}
           </div>
         </div>
       </div>
@@ -77,7 +78,8 @@
             class="md:mb-0 {{ if not (modBool $i 2) }}
               md:order-2
             {{ end }} md:col-5 mb-12">
-            {{ partial "image" (dict "Src" .image "Alt" "feature image" "DisplayXL" "520x" "DisplayLG" "425x" "DisplayMD" "360x") }}
+            {{ partial "image" (dict "Src" .image "Class" "dark:hidden" "Alt" "feature image" "DisplayXL" "520x" "DisplayLG" "425x" "DisplayMD" "360x") }}
+            {{ partial "image" (dict "Src" .image_dark "Class" "hidden dark:block" "Alt" "feature image" "DisplayXL" "520x" "DisplayLG" "425x" "DisplayMD" "360x") }}
           </div>
           <div
             class="{{ if not (modBool $i 2) }}
