--- a/layouts/partials/essentials/header.html
+++ b/layouts/partials/essentials/header.html
@@ -102,7 +102,11 @@
           <li class="mt-4 inline-block lg:hidden">
             <a
               class="btn btn-{{ .type }} btn-sm {{ if gt $index 0 }}ml-4{{ end }}"
-              href="{{ .link | absURL }}">
+              {{ if strings.HasPrefix .link `http` }}
+                href="{{ .link | absURL }}" target="_blank" rel="noopener"
+              {{ else }}
+                href="{{ .link | absLangURL }}"
+              {{ end }}>
               {{ i18n (printf "button_labels.%s" .label_key) | safeHTML }}
             </a>
           </li>
@@ -137,9 +141,10 @@
         {{ if .enable }}
           <a
             class="btn btn-{{ .type }} btn-sm hidden lg:inline-block {{ if gt $index 0 }}ml-4{{ end }}"
-            href="{{ .link | absURL }}"
             {{ if strings.HasPrefix .link `http` }}
-              target="_blank" rel="noopener"
+              href="{{ .link | absURL }}" target="_blank" rel="noopener"
+            {{ else }}
+              href="{{ .link | absLangURL }}"
             {{ end }}>
             {{ i18n (printf "button_labels.%s" .label_key) | safeHTML }}
         </a>
