--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
   <!-- Countdown Timer -->
 
   {{ if site.Params.next_event.enable }}
-  <section class="section next-event">
+  <section class="section next-event py-10 border-y border-border dark:border-darkmode-border">
     <div class="container">
       <div class="row justify-center">
         <div class="lg:col-7 md:col-9 text-center">
