--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -28,6 +28,7 @@
     height="320"
     frameborder="0"
     scrolling="no"
+    class="border-y border-border dark:border-darkmode-border"
   ></iframe>
   <!-- /subscription form -->
 {{ end }}
