--- a/layouts/partials/essentials/header.html
+++ b/layouts/partials/essentials/header.html
@@ -12,7 +12,7 @@
     <input id="nav-toggle" type="checkbox" class="hidden" />
     <label
       for="nav-toggle"
-      class="order-3 cursor-pointer flex items-center lg:hidden text-dark dark:text-white lg:order-1">
+      class="order-3 cursor-pointer flex items-center xl:hidden text-dark dark:text-white xl:order-1">
       <svg id="show-button" class="h-6 fill-current block" viewBox="0 0 20 20">
         <title>Menu Open</title>
         <path d="M0 3h20v2H0V3z m0 6h20v2H0V9z m0 6h20v2H0V0z"></path>
@@ -29,7 +29,7 @@
     <!-- main navbar -->
     <ul
       id="nav-menu"
-      class="navbar-nav order-3 hidden lg:flex w-full pb-6 lg:order-1 lg:w-auto lg:space-x-2 lg:pb-0 xl:space-x-8">
+      class="navbar-nav order-3 hidden xl:flex w-full pb-6 xl:order-1 xl:w-auto xl:space-x-2 xl:pb-0">
       {{ $currentPage := . }}
       {{ range site.Menus.main }}
         {{ $menuURL := .URL | absLangURL }}
@@ -50,7 +50,7 @@
               </svg>
             </span>
             <ul
-              class="nav-dropdown-list lg:group-hover:visible lg:group-hover:opacity-100">
+              class="nav-dropdown-list xl:group-hover:visible xl:group-hover:opacity-100">
               {{ range .Children }}
                 {{ $childURL := .URL | absLangURL }}
                 {{ $active := eq $childURL $pageURL }}
@@ -99,7 +99,7 @@
       {{ $index := 0 }}
       {{ range site.Params.navigation_buttons }}
         {{ if .enable }}
-          <li class="mt-4 inline-block lg:hidden">
+          <li class="mt-4 inline-block xl:hidden">
             <a
               class="btn btn-{{ .type }} btn-sm {{ if gt $index 0 }}ml-4{{ end }}"
               {{ if strings.HasPrefix .link `http` }}
@@ -115,13 +115,13 @@
       {{ end }}
     </ul>
 
-    <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
+    <div class="order-1 ml-auto flex items-center md:order-2 xl:ml-0">
       {{ with site.Params.search }}
         {{ if .enable }}
           <button
             aria-label="search"
             {{ if and (not site.Params.navigation_button.enable) (not site.Params.theme_switcher)}}
-            class="border-border text-dark hover:text-primary dark:border-darkmode-border mr-5 inline-block border-r lg:border-r-0 pr-5 lg:pr-0 text-xl dark:text-white dark:hover:text-darkmode-primary"
+            class="border-border text-dark hover:text-primary dark:border-darkmode-border mr-5 inline-block border-r xl:border-r-0 pr-5 xl:pr-0 text-xl dark:text-white dark:hover:text-darkmode-primary"
             {{ else }}
             class="border-border text-dark hover:text-primary dark:border-darkmode-border mr-5 inline-block border-r pr-5 text-xl dark:text-white dark:hover:text-darkmode-primary"
             {{ end }}
@@ -140,7 +140,7 @@
       {{ range site.Params.navigation_buttons }}
         {{ if .enable }}
           <a
-            class="btn btn-{{ .type }} btn-sm hidden lg:inline-block {{ if gt $index 0 }}ml-4{{ end }}"
+            class="btn btn-{{ .type }} btn-sm hidden xl:inline-block {{ if gt $index 0 }}ml-4{{ end }}"
             {{ if strings.HasPrefix .link `http` }}
               href="{{ .link | absURL }}" target="_blank" rel="noopener"
             {{ else }}
