--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -152,16 +152,40 @@
                 <div class="space-y-8 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
                     <!-- Form -->
                     {{ range .Params.step_2.form }}
-                    <div class="flex flex-col mx-auto w-full max-w-xl">
-                        <label for="{{ .id }}" class="flex gap-1 items-center text-text dark:text-darkmode-text text-base leading-relaxed">{{ .label }} {{ if .hint }} <span class="text-light dark:text-darkmode-light">({{.hint}})</span> {{ end }}
-                            {{ if .required }}
+                      <div class="flex flex-col mx-auto w-full max-w-xl">
+                        <label for="{{ .id }}" class="flex gap-1 items-center text-base">
+                          {{ .label }}
+                          {{ if .hint }}<span class="text-sm text-gray-500">({{ .hint }})</span>{{ end }}
+                          {{ if .required }}
                             <svg xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
                                 <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
                             </svg>
                             {{ end }}
                         </label>
-                        <input type="{{ .type }}" id="{{ .id }}" name="{{ .id }}" {{ if .required }} required {{ end }} class="w-full focus:outline-none bg-body dark:bg-darkmode-body text-text dark:text-darkmode-text placeholder-border dark:placeholder-darkmode-border text-lg font-normal leading-relaxed px-5 py-3 rounded-lg  border border-border dark:border-darkmode-border justify-start items-center gap-2 inline-flex" placeholder="{{ .placeholder }}">
-                    </div>
+
+                        {{ if .select }}
+                          <select 
+                            id="{{ .id }}" 
+                            name="{{ .id }}"
+                            {{ if .required }} required {{ end }}
+                            class="w-full px-5 py-3 rounded-lg border">
+                            {{ range .select }}
+                              <option value="{{ .value }}" {{ if eq $.Get .id .value }}selected{{ end }}>
+                                {{ .label }}
+                              </option>
+                            {{ end }}
+                          </select>
+
+                        {{ else }}
+                          <input
+                            type="{{ .type }}"
+                            id="{{ .id }}"
+                            name="{{ .id }}"
+                            {{ if .required }} required {{ end }}
+                            class="w-full px-5 py-3 rounded-lg border"
+                            placeholder="{{ .placeholder }}">
+                        {{ end }}
+                      </div>
                     {{ end }}
                 </div>
             </div>
