fixed typo, removed newsletter consent

--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -227,7 +227,7 @@
                 <label for="{{ .id }}" class="ms-4 text-md text-dark dark:text-darkmode-dark">
                   {{ .label.text }}
                   {{ with .label.link }} 
-                  <a href="{{ .ulr }}" class="text-blue-600 dark:text-blue-500 hover:underline">
+                  <a href="{{ .url }}" class="text-blue-600 dark:text-blue-500 hover:underline">
                     {{ .text }}
                   </a>
                   {{ end }}
