--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -138,20 +138,6 @@
               </div>
               <!-- End Input Number -->
 
-              <!-- Discount Code -->
-              <div class="mx-auto max-w-md mt-16 px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
-                <div class="flex flex-col mx-auto w-full max-w-xl">
-                  <label for="discount_code"  class="flex gap-1 items-center text-text dark:text-darkmode-text text-base leading-relaxed">Discount Code</label>
-                  <div class="flex items-center gap-4">
-                    <input type="text" id="discount_code" name="discount_code" class="w-full px-4 py-2 rounded-lg border border-border dark:border-darkmode-border text-text dark:text-darkmode-text bg-body dark:bg-darkmode-body" placeholder="Enter your code">
-                    <button type="button" id="validate_discount_btn" class="px-4 py-2 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">Apply</button>
-                  </div>
-                  <p id="discount_code_feedback" class="text-sm text-red-500 hidden">Invalid code.</p>
-                  <p id="discount_code_success" class="text-sm text-green-500 hidden">Discount applied!</p>
-                </div>
-              </div>
-              <!-- End Discount Code -->
-
           </div>
       </div>
       </div>
@@ -256,8 +242,8 @@
               {{ end }}
             </div>
           </div>
-            <!-- End Consents -->
-            <!-- Total -->
+          <!-- End Consents -->
+          <!-- Total -->
           <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
             <div id="total" class="flex flex-wrap gap-x-4">
               <p class="flex-none text-dark dark:text-darkmode-dark">
@@ -271,11 +257,26 @@
               </p>
             </div>
           </div>
-            <!-- End Total -->
-            <!-- Turnstile -->
-            <input type="hidden" id="turnstile-response" name="turnstile-response" value="">
-            <div id="turnstile-element" class="flex justify-center py-8"></div>
-            <!-- End Turnstile -->
+          <!-- End Total -->
+
+          <!-- Discount Code -->
+          <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+            <div class="flex flex-col mx-auto w-full max-w-xl">
+              <label for="discount_code"  class="flex gap-1 items-center text-text dark:text-darkmode-text text-base leading-relaxed">Discount Code</label>
+              <div class="flex items-center gap-4">
+                <input type="text" id="discount_code" name="discount_code" class="w-full px-4 py-2 rounded-lg border border-border dark:border-darkmode-border text-text dark:text-darkmode-text bg-body dark:bg-darkmode-body" placeholder="Enter your code">
+                <button type="button" id="validate_discount_btn" class="px-4 py-2 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">Apply</button>
+              </div>
+              <p id="discount_code_feedback" class="text-sm text-red-500 hidden">Invalid code.</p>
+              <p id="discount_code_success" class="text-sm text-green-500 hidden">Discount applied!</p>
+            </div>
+          </div>
+          <!-- End Discount Code -->
+
+          <!-- Turnstile -->
+          <input type="hidden" id="turnstile-response" name="turnstile-response" value="">
+          <div id="turnstile-element" class="flex justify-center py-8"></div>
+          <!-- End Turnstile -->
         </div>
       </div>
       <!-- End Third Contnet -->
