--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -79,10 +79,10 @@
                         {{ if .multiple }}
                         <p class="text-xl text-text dark:text-darkmode-text from-tag">{{ i18n "membership.plan.from" }}</p>
                         <div class="flex items-center mb-6">
-                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unitPrice="{{ .price }}">{{ mul 2 .price }}</span></span>
+                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unit-price="{{ .price }}">{{ mul 2 .price }}</span></span>
                         {{ else }}
                         <div class="flex items-center mb-6">
-                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unitPrice="{{ .price }}">{{ .price }}</span></span>
+                            <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€<span class="price-tag" data-unit-price="{{ .price }}">{{ .price }}</span></span>
                         {{ end }}
                         <span class="text-xl text-text dark:text-darkmode-text">{{ i18n "membership.plan.per_year" }}</span>
                           </div>
