--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -141,13 +141,13 @@
               <!-- Discount Code -->
               <div class="mx-auto max-w-md mt-16 px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
                 <div class="flex flex-col mx-auto w-full max-w-xl">
-                  <label for="discount_code"  class="flex gap-1 items-center text-text dark:text-darkmode-text text-base leading-relaxed">Discount Code</label>
+                  <label for="discount_code"  class="flex gap-1 items-center text-text dark:text-darkmode-text text-base leading-relaxed">{{ i18n "membership.promocode.label" }}</label>
                   <div class="flex items-center gap-4">
-                    <input type="text" id="discount_code" name="discount_code" class="w-full px-4 py-2 rounded-lg border border-border dark:border-darkmode-border text-text dark:text-darkmode-text bg-body dark:bg-darkmode-body" placeholder="Enter your code">
-                    <button type="button" id="validate_discount_btn" class="px-4 py-2 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">Apply</button>
+                    <input type="text" id="discount_code" name="discount_code" class="w-full px-4 py-2 rounded-lg border border-border dark:border-darkmode-border text-text dark:text-darkmode-text bg-body dark:bg-darkmode-body">
+                    <button type="button" id="validate_discount_btn" class="px-4 py-2 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">{{ i18n "membership.promocode.button" }}</button>
                   </div>
-                  <p id="discount_code_feedback" class="text-sm text-red-500 hidden">Invalid code.</p>
-                  <p id="discount_code_success" class="text-sm text-green-500 hidden">Discount applied!</p>
+                  <p id="discount_code_feedback" class="text-sm mt-4 text-red-500 hidden">{{ i18n "membership.promocode.invalid" }}</p>
+                  <p id="discount_code_success" class="text-sm mt-4 text-green-500 hidden">{{ i18n "membership.promocode.valid" }}</p>
                 </div>
               </div>
               <!-- End Discount Code -->
